# cookiecutter-poetry-starter

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.package_name}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: release.yml  test.yml
{{cookiecutter.package_name}}/src/{{cookiecutter.module_name}}/: main.py
