[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
readme = "README.md"
license = "{{ cookiecutter.license }}"
homepage = "https://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter.package_name }}"
repository = "https://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter.package_name }}"
packages = [
    { include = "{{ cookiecutter.module_name }}", from = "src" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter.package_name }}/issues"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.test.dependencies]
pylint = "*"
pytest = "*"
black = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pre-commit-hooks = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
